--- a/MobFrontend/package.json
+++ b/MobFrontend/package.json
@@ -9,5 +9,22 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.9.0",
+    "expo-secure-store": "^14.2.3",
+    "react-hook-form": "^7.56.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0"
+  }
 }
